# codex-discord-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
codex_discord_mcp/: __init__.py  __main__.py  cli.py  codex_client.py  config.py  discord_bot.py  discord_rest.py  jobs.py  logging_setup.py  mcp_server.py  metrics.py  security.py  storage.py
scripts/: install.ps1
tests/: test_codex_client.py  test_config.py  test_jobs.py  test_mcp_server.py  test_security.py  test_storage.py
