[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "codex-discord-mcp"
version = "0.2.0"
description = "Discord bot + MCP server bridge for Codex CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "StealthyLabs" }]
dependencies = [
    "discord.py>=2.4.0",
    "mcp>=1.2.0",
    "aiosqlite>=0.19.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
codex-discord-bot = "codex_discord_mcp.cli:run_bot_cli"
codex-discord-mcp = "codex_discord_mcp.cli:run_mcp_cli"

[tool.hatch.build.targets.wheel]
packages = ["codex_discord_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "SIM"]
# S101 assert allowed; S603/S607 subprocess; S104 0.0.0.0 needed for containers;
# S110 used intentionally for best-effort cleanup paths; SIM117 nested with for clarity.
ignore = ["S101", "S603", "S607", "S104", "S110", "SIM103", "SIM105", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
